Add headline/hero section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,31 @@
         <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
       </div>
     </header>
+    <section class="headline">
+      <div class="container">
+        <h2 class="headline--title">I’m Tekle Glad to see you!</h2>
+        <p class="headline--body">
+          I’m a software developer! I can help you build a product , feature or
+          website Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don’t hestiate to contact
+          me.
+        </p>
+        <p class="headline--supporting-text">Let's connect</p>
+        <div class="social-media">
+          <a href="" class="social-media-items twitter-link">
+            <img src="./img/icons/twitter_icon.svg" alt="twitter icon" />
+          </a>
+          <a href="" class="social-media-items linkedin-link">
+            <img src="./img/icons/Linkedin icon.svg" alt="LinkedIn icon" />
+          </a>
+          <a href="" class="social-media-items gmail-link">
+            <img src="./img/icons/gmail_icon.svg" alt="Gmail icon" />
+          </a>
+          <a href="" class="social-media-items victory-link">
+            <img src="./img/icons/victory_icon.svg" alt="Victory icon" />
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
