Fix webhint linter error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="./img/icons/twitter_icon.svg" alt="twitter icon" />
           </a>
           <a href="" class="social-media-items linkedin-link">
-            <img src="./img/icons/Linkedin icon.svg" alt="LinkedIn icon" />
+            <img src="./img/icons/Linkedin-icon.svg" alt="LinkedIn icon" />
           </a>
           <a href="" class="social-media-items gmail-link">
             <img src="./img/icons/gmail_icon.svg" alt="Gmail icon" />
