Change font size, color, style according to figma design template

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section class="headline">
       <div class="container">
-        <h2 class="headline--title">I’m Tekle Glad to see you!</h2>
+        <h2 class="headline--title">I’m Tekle G. Glad to see you!</h2>
         <p class="headline--body">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
@@ -38,16 +38,20 @@
         <p class="headline--supporting-text">Let's connect</p>
         <div class="social-media">
           <a href="" class="social-media-items twitter-link">
-            <img src="./img/icons/twitter_icon.svg" alt="twitter icon" />
+            <i class="fab fa-twitter"></i>
           </a>
           <a href="" class="social-media-items linkedin-link">
-            <img src="./img/icons/Linkedin-icon.svg" alt="LinkedIn icon" />
+            <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="" class="social-media-items gmail-link">
-            <img src="./img/icons/gmail_icon.svg" alt="Gmail icon" />
+          <a href="" class="social-media-items medium-link">
+            <i class="fab fa-medium-m"></i>
           </a>
-          <a href="" class="social-media-items victory-link">
-            <img src="./img/icons/victory_icon.svg" alt="Victory icon" />
+          <a href="" class="social-media-items github-link">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="" class="social-media-items angelist-link">
+            <!-- <img src="./img/icons/victory_icon.svg" alt="Victory icon" /> -->
+            <i class="fab fa-angellist"></i>
           </a>
         </div>
       </div>
