Fix social-media list, headline title and subtitle according to the optional suggestions given on GitHub

--- a/index.html
+++ b/index.html
@@ -22,37 +22,54 @@
   <body>
     <header class="toolbar">
       <div class="container">
-        <p class="logo">My Logo</p>
-        <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
+        <div class="logo">
+          <a href="#" class="logo-link">My Logo</a>
+        </div>
+        <nav class="nav-menu">
+          <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
+        </nav>
       </div>
     </header>
     <section class="headline">
       <div class="container">
-        <h2 class="headline--title">I’m Tekle G. Glad to see you!</h2>
+        <h1 class="headline--title">I’m Tekle</h1>
+        <h2 class="headline--title subtitle">Glad to see you!</h2>
         <p class="headline--body">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hestiate to contact
           me.
         </p>
+
         <p class="headline--supporting-text">Let's connect</p>
-        <div class="social-media">
-          <a href="" class="social-media-items twitter-link">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="social-media-items linkedin-link">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="" class="social-media-items medium-link">
-            <i class="fab fa-medium-m"></i>
-          </a>
-          <a href="" class="social-media-items github-link">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="" class="social-media-items angelist-link">
-            <i class="fab fa-angellist"></i>
-          </a>
-        </div>
+
+        <ul class="social-media">
+          <li class="social-meida__list-item">
+            <a href="" class="social-media-items twitter-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="" class="social-media-items linkedin-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="" class="social-media-items medium-link">
+              <i class="fab fa-medium-m"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="" class="social-media-items github-link">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="" class="social-media-items angelist-link">
+              <i class="fab fa-angellist"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
   </body>
