Add links to logo and social media icons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="toolbar">
       <div class="container">
         <div class="logo">
-          <a href="#" class="logo-link">My Logo</a>
+          <a href="./index.html" class="logo-link">TG</a>
         </div>
         <nav class="nav-menu">
           <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
@@ -45,27 +45,27 @@
 
         <ul class="social-media">
           <li class="social-meida__list-item">
-            <a href="" class="social-media-items twitter-link">
+            <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="" class="social-media-items linkedin-link">
+            <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b" class="social-media-items linkedin-link">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="" class="social-media-items medium-link">
+            <a href="#" class="social-media-items medium-link">
               <i class="fab fa-medium-m"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="" class="social-media-items github-link">
+            <a href="https://github.com/gtekle" class="social-media-items github-link">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="" class="social-media-items angelist-link">
+            <a href="#" class="social-media-items angelist-link">
               <i class="fab fa-angellist"></i>
             </a>
           </li>
