Add works section in index.html

--- a/index.html
+++ b/index.html
@@ -20,56 +20,182 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header class="toolbar">
-      <div class="container">
-        <div class="logo">
-          <a href="./index.html" class="logo-link">TG</a>
+    <div class="header-wrapper container">
+      <header class="toolbar">
+        <div class="container flex-container">
+          <div class="logo">
+            <a href="./index.html" class="logo-link">TG</a>
+          </div>
+          <nav class="nav-menu">
+            <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
+          </nav>
         </div>
-        <nav class="nav-menu">
-          <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
-        </nav>
-      </div>
-    </header>
-    <section class="headline">
-      <div class="container">
-        <h1 class="headline--title">I’m Tekle</h1>
-        <h2 class="headline--title subtitle">Glad to see you!</h2>
-        <p class="headline--body">
-          I’m a software developer! I can help you build a product , feature or
-          website Look through some of my work and experience! If you like what
-          you see and have a project you need coded, don’t hestiate to contact
-          me.
-        </p>
+      </header>
+      <section class="headline">
+        <div class="container flex-container">
+          <h1 class="headline--title">I’m Tekle</h1>
+          <h2 class="headline--title subtitle">Glad to see you!</h2>
+          <p class="headline--body">
+            I’m a software developer! I can help you build a product , feature
+            or website Look through some of my work and experience! If you like
+            what you see and have a project you need coded, don’t hestiate to
+            contact me.
+          </p>
+          <p class="headline--supporting-text">Let's connect</p>
+          <ul class="social-media">
+            <li class="social-meida__list-item">
+              <a
+                href="https://twitter.com/teklegyohannes"
+                class="social-media-items twitter-link"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a
+                href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+                class="social-media-items linkedin-link"
+              >
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a href="#" class="social-media-items medium-link">
+                <i class="fab fa-medium-m"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a
+                href="https://github.com/gtekle"
+                class="social-media-items github-link"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a href="#" class="social-media-items angelist-link">
+                <i class="fab fa-angellist"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
 
-        <p class="headline--supporting-text">Let's connect</p>
-
-        <ul class="social-media">
-          <li class="social-meida__list-item">
-            <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-          <li class="social-meida__list-item">
-            <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b" class="social-media-items linkedin-link">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </li>
-          <li class="social-meida__list-item">
-            <a href="#" class="social-media-items medium-link">
-              <i class="fab fa-medium-m"></i>
-            </a>
-          </li>
-          <li class="social-meida__list-item">
-            <a href="https://github.com/gtekle" class="social-media-items github-link">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-          <li class="social-meida__list-item">
-            <a href="#" class="social-media-items angelist-link">
-              <i class="fab fa-angellist"></i>
-            </a>
-          </li>
-        </ul>
+    <section class="works">
+      <div class="container grid-container">
+        <article class="card">
+          <div class="project-snapshoot">
+            <img
+              src="./img//tonic-project-snapshot.png"
+              alt="tonic project snapshoot"
+            />
+          </div>
+          <p class="project-title">Tonic</p>
+          <ul class="project-metadata">
+            <li class="client">Client</li>
+            <li><span class="counter"></span></li>
+            <li class="role">Role</li>
+            <li><span class="counter"></span></li>
+            <li class="year">Year</li>
+          </ul>
+          <p class="project-description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
+            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
+            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
+            expedita.
+          </p>
+          <ul class="languages">
+            <li><span>HTML</span></li>
+            <li><span>CSS</span></li>
+            <li><span>JavaScript</span></li>
+          </ul>
+          <a class="btn-see-project" href="#" type="button">See Porject</a>
+        </article>
+        <article class="card">
+          <div class="project-snapshoot">
+            <img
+              src="./img//multi-post-stories-project-snapshot.png"
+              alt="multi-post stories project snapshoot"
+            />
+          </div>
+          <p class="project-title">Multi-post stories</p>
+          <ul class="project-metadata">
+            <li class="client">Client</li>
+            <li><span class="counter"></span></li>
+            <li class="role">Role</li>
+            <li><span class="counter"></span></li>
+            <li class="year">Year</li>
+          </ul>
+          <p class="project-description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
+            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
+            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
+            expedita.
+          </p>
+          <ul class="languages">
+            <li><span>HTML</span></li>
+            <li><span>CSS</span></li>
+            <li><span>JavaScript</span></li>
+          </ul>
+          <a class="btn-see-project" href="#" type="button">See Porject</a>
+        </article>
+        <article class="card">
+          <div class="project-snapshoot">
+            <img
+              src="./img/tonic-two-project-snapshot.png"
+              alt="tonic project two snapshoot"
+            />
+          </div>
+          <p class="project-title">Tonic</p>
+          <ul class="project-metadata">
+            <li class="client">Client</li>
+            <li><span class="counter"></span></li>
+            <li class="role">Role</li>
+            <li><span class="counter"></span></li>
+            <li class="year">Year</li>
+          </ul>
+          <p class="project-description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
+            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
+            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
+            expedita.
+          </p>
+          <ul class="languages">
+            <li><span>HTML</span></li>
+            <li><span>CSS</span></li>
+            <li><span>JavaScript</span></li>
+          </ul>
+          <a class="btn-see-project" href="#" type="button">See Porject</a>
+        </article>
+        <article class="card">
+          <div class="project-snapshoot">
+            <img
+              src="./img/multi-post-stories-two-project-snapshot.png"
+              alt="multi-post stories project two snapshoot"
+            />
+          </div>
+          <p class="project-title">Multi-post stories</p>
+          <ul class="project-metadata">
+            <li class="client">Client</li>
+            <li><span class="counter"></span></li>
+            <li class="role">Role</li>
+            <li><span class="counter"></span></li>
+            <li class="year">Year</li>
+          </ul>
+          <p class="project-description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
+            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
+            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
+            expedita.
+          </p>
+          <ul class="languages">
+            <li><span>HTML</span></li>
+            <li><span>CSS</span></li>
+            <li><span>JavaScript</span></li>
+          </ul>
+          <a class="btn-see-project" href="#" type="button">See Porject</a>
+        </article>
       </div>
     </section>
   </body>
