Fix linting errors

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <section class="works">
       <div class="container grid-container">
+        <h2 class="section-title">Projects</h2>
         <article class="card">
           <div class="project-snapshoot">
             <img
@@ -91,7 +92,7 @@
               alt="tonic project snapshoot"
             />
           </div>
-          <p class="project-title">Tonic</p>
+          <h3 class="project-title">Tonic</h3>
           <ul class="project-metadata">
             <li class="client">Client</li>
             <li><span class="counter"></span></li>
@@ -110,7 +111,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#" type="button">See Porject</a>
+          <a class="btn-see-project" href="#">See Porject</a>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -119,7 +120,7 @@
               alt="multi-post stories project snapshoot"
             />
           </div>
-          <p class="project-title">Multi-post stories</p>
+          <h3 class="project-title">Multi-post stories</h3>
           <ul class="project-metadata">
             <li class="client">Client</li>
             <li><span class="counter"></span></li>
@@ -138,7 +139,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#" type="button">See Porject</a>
+          <a class="btn-see-project" href="#">See Porject</a>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -147,7 +148,7 @@
               alt="tonic project two snapshoot"
             />
           </div>
-          <p class="project-title">Tonic</p>
+          <h3 class="project-title">Tonic</h3>
           <ul class="project-metadata">
             <li class="client">Client</li>
             <li><span class="counter"></span></li>
@@ -166,7 +167,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#" type="button">See Porject</a>
+          <a class="btn-see-project" href="#">See Porject</a>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -175,7 +176,7 @@
               alt="multi-post stories project two snapshoot"
             />
           </div>
-          <p class="project-title">Multi-post stories</p>
+          <h3 class="project-title">Multi-post stories</h3>
           <ul class="project-metadata">
             <li class="client">Client</li>
             <li><span class="counter"></span></li>
@@ -194,7 +195,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#" type="button">See Porject</a>
+          <a class="btn-see-project" href="#">See Porject</a>
         </article>
       </div>
     </section>
