--- a/index.html
+++ b/index.html
@@ -199,5 +199,109 @@
         </article>
       </div>
     </section>
+
+    <section class="about-me">
+      <div class="about-me-wrapper container">
+        <div class="about-me-container">
+          <h2 class="about-me-title">
+            About <br />
+            Myself
+          </h2>
+          <p class="about-me-body">
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
+          <p class="about-me-suporting-text">Let's connect</p>
+          <ul class="social-media">
+            <li class="social-meida__list-item">
+              <a
+                href="https://twitter.com/teklegyohannes"
+                class="social-media-items twitter-link"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a
+                href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+                class="social-media-items linkedin-link"
+              >
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a href="#" class="social-media-items medium-link">
+                <i class="fab fa-medium-m"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a
+                href="https://github.com/gtekle"
+                class="social-media-items github-link"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li class="social-meida__list-item">
+              <a href="#" class="social-media-items angelist-link">
+                <i class="fab fa-angellist"></i>
+              </a>
+            </li>
+          </ul>
+          <a class="btn-get-my-resume" href="#">Get my resume</a>
+          <div class="programming-languages">
+            <div class="language-head">
+              <h3 class="languages-title">Languages</h3>
+              <a href="#"><i class="fas fa-angle-down"></i></a>
+            </div>
+            <ul class="language-list">
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img
+                      src="./img/icons/javascript-icon.png"
+                      alt="CSS3 icon"
+                    />
+                  </div>
+                  <p class="language-name">JavaScript</p>
+                </div>
+              </li>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/html5-icon.png" alt="CSS3 icon" />
+                  </div>
+                  <p class="language-name">HTML</p>
+                </div>
+              </li>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
+                  </div>
+                  <p class="language-name">CSS</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="frameworks">
+            <div class="frameworks-head">
+              <h3 class="frameworks-title">Frameworks</h3>
+              <a href="#"><i class="fas fa-angle-right"></i></a>
+            </div>
+            <hr />
+          </div>
+          <div class="skills">
+            <div class="skills-head">
+              <h3 class="skills-title">Skills</h3>
+              <a href="#"><i class="fas fa-angle-right"></i></a>
+            </div>
+            <hr />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
