Fix button animation and typography error PR feedbacks by Gambit142 on GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             what you see and have a project you need coded, don’t hestiate to
             contact me.
           </p>
-          <p class="headline--supporting-text">Let's connect</p>
+          <h3 class="headline--supporting-text">Let's connect</h3>
           <ul class="social-media">
             <li class="social-meida__list-item">
               <a
@@ -111,7 +111,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#">See Porject</a>
+          <button class="btn btn-see-project" type="button">See Porject</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -139,7 +139,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#">See Porject</a>
+          <button class="btn btn-see-project" type="button">See Porject</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -167,7 +167,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#">See Porject</a>
+          <button class="btn btn-see-project" type="button">See Porject</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -195,7 +195,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <a class="btn-see-project" href="#">See Porject</a>
+          <button class="btn btn-see-project" type="button">See Porject</button>
         </article>
       </div>
     </section>
@@ -250,7 +250,9 @@
               </a>
             </li>
           </ul>
-          <a class="btn-get-my-resume" href="#">Get my resume</a>
+          <button class="btn btn-get-my-resume" type="button">
+            Get my resume
+          </button>
           <div class="programming-languages">
             <div class="language-head">
               <h3 class="languages-title">Languages</h3>
