Fix a typo in button text value as per PR feedback by leolpaz

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <button class="btn btn-see-project" type="button">See Porject</button>
+          <button class="btn btn-see-project" type="button">See Project</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -139,7 +139,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <button class="btn btn-see-project" type="button">See Porject</button>
+          <button class="btn btn-see-project" type="button">See Project</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -167,7 +167,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <button class="btn btn-see-project" type="button">See Porject</button>
+          <button class="btn btn-see-project" type="button">See Project</button>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -195,7 +195,7 @@
             <li><span>CSS</span></li>
             <li><span>JavaScript</span></li>
           </ul>
-          <button class="btn btn-see-project" type="button">See Porject</button>
+          <button class="btn btn-see-project" type="button">See Project</button>
         </article>
       </div>
     </section>
